--- a/catalog/catalog-info-webapp.yaml
+++ b/catalog/catalog-info-webapp.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: web-app
-  description: Web App
+  description: Tanzu Java Web App
   tags:
     - app-accelerator
     - java
@@ -12,6 +12,6 @@ metadata:
   annotations:
     'backstage.io/kubernetes-label-selector': 'app.kubernetes.io/part-of=web-app'
 spec:
-  type: java service
-  lifecycle: LTS
-  owner: app-team
+  type: service
+  lifecycle: experimental
+  owner: default-team
